--- a/wiki/CRDs.adoc
+++ b/wiki/CRDs.adoc
@@ -9,6 +9,32 @@ The AWX Operator uses the following Custom Resource Definitions:
 1. `AwxInstance` - Defines an AWX instance connection that the operator will manage.
 2. `AwxProject` - Defines an AWX project that the operator will create and maintain in an AWX instance.
 
+## Status Model
+
+All resources in the AWX Operator share a common status model based on Kubernetes best practices:
+
+### Common Status Fields
+
+All resource statuses include these fields:
+
+* `message` - Informational message about the current status
+* `phase` - Current phase of the resource (Pending, Running, Succeeded, Failed, Unknown)
+* `firstSuccessfulSync` - Time when the resource was first successfully synchronized
+* `lastUpdateTime` - Time of the last status update
+* `observedGeneration` - The resource generation that this status reflects
+* `conditions` - List of conditions representing the resource's state
+
+### Status Conditions
+
+Conditions provide detailed status information for resources. Each condition has:
+
+* `type` - Type of the condition (e.g., Ready, Available, Progressing)
+* `status` - Status of the condition (True, False, Unknown)
+* `lastTransitionTime` - Last time the condition status changed
+* `lastUpdateTime` - Last time the condition was updated
+* `reason` - Machine-readable reason for the condition's status
+* `message` - Human-readable message about the condition
+
 ## AwxInstance CRD
 
 The `AwxInstance` CRD represents a connection to an AWX instance that the operator can manage.
@@ -40,11 +66,12 @@ The `spec` field contains the following properties:
 
 ### Status
 
-The `status` field contains:
+In addition to the common status fields, the AwxInstance status includes:
 
-* `connectionStatus` - The current connection status (Connected, Failed, Unknown)
-* `message` - An informational message about the connection status
+* `connectionStatus` - The current connection status (Connected, Disconnected, Error)
 * `lastConnected` - Timestamp of last successful connection
+* `awxVersion` - AWX version reported by the instance
+* `failedConnectionAttempts` - Number of failed connection attempts
 
 ## AwxProject CRD
 
@@ -59,6 +86,8 @@ kind: AwxProject
 metadata:
   name: example-project
   namespace: default
+  labels:
+    awx-instance: my-awx  # Reference to the AwxInstance CR
 spec:
   name: "Example Project"
   description: "An example project managed by the AWX Operator"
@@ -77,10 +106,11 @@ The `spec` field contains the following properties:
 
 ### Status
 
-The `status` field contains:
+In addition to the common status fields, the AwxProject status includes:
 
 * `awxId` - The ID of the project in AWX 
-* `created` - The creation timestamp
-* `modified` - The last modification timestamp
-* `status` - The current status of the project
-* `message` - Informational message about the project status 
+* `created` - When the project was created in AWX
+* `modified` - When the project was last modified in AWX
+* `status` - The project status as reported by AWX
+* `lastUpdateJobTime` - Last time a project update was initiated
+* `lastUpdateJobId` - ID of the last update job in AWX 
